集成异步callback方法
