# docs/swagger.json
@@ -286,7 +286,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.EndpointCreateRequest"
+                            "$ref": "#/definitions/request.EndpointUpdateRequest"
                         }
                     }
                 ],
@@ -392,8 +392,8 @@
                     "description": "comfyUI api用工作流",
                     "type": "string"
                 },
-                "app_uid": {
-                    "description": "暂时无用，多服务器时可以指定appUid",
+                "callback_url": {
+                    "description": "http://127.0.0.1:8080/api/v1/callback",
                     "type": "string"
                 },
                 "created_at": {
@@ -519,6 +519,10 @@
                     "description": "comfy api版本json",
                     "type": "string"
                 },
+                "callback_url": {
+                    "description": "回调地址 example http://127.0.0.1:9999/v1/callback",
+                    "type": "string"
+                },
                 "description": {
                     "description": "描述",
                     "type": "string"
@@ -536,6 +540,10 @@
         "request.EndpointIndexRequest": {
             "type": "object",
             "properties": {
+                "callback_url": {
+                    "description": "回调地址 example http://127.0.0.1:9999/v1/callback",
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -590,6 +598,30 @@
                     "items": {
                         "$ref": "#/definitions/request.EndpointParamItemRequest"
                     }
+                }
+            }
+        },
+        "request.EndpointUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "api_json": {
+                    "description": "comfy api版本json",
+                    "type": "string"
+                },
+                "callback_url": {
+                    "description": "回调地址 example http://127.0.0.1:9999/v1/callback",
+                    "type": "string"
+                },
+                "description": {
+                    "description": "描述",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "workflow": {
+                    "description": "comfy 工作流",
+                    "type": "string"
                 }
             }
         },
